--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,7 +191,7 @@ body{
   border-top-right-radius: 10px;
 }
 .shadow01{
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 .media_links a{
   text-decoration: none;
